--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "rss:sitemap": "node ./lib/genr8Sitemap.js",
     "start": "npm run build:index && npm run rss:blog && npm run rss:pod && npm run rss:sitemap",
     "server": "npm start && http-server -p 4242",
-    "pretty": "standard --fix"
+    "pretty": "standard --fix",
+    "purge": "curl -X POST \"https://api.cloudflare.com/client/v4/zones/$BRINE_TOKEN/purge_cache\" -H \"Authorization: Bearer $BEARER\" -H \"Content-Type: application/json\" --data '{\"purge_everything\":true}'"
   },
   "devDependencies": {
     "http-server": "^14.1.1",
