--- a/.github/workflows/deploy2pages.yml
+++ b/.github/workflows/deploy2pages.yml
@@ -21,6 +21,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Install Dependencies
         run: npm ci
+      - name: Start Server
+        run: npm start
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
